--- a/1205.1439/psionticproof2.tex
+++ b/1205.1439/psionticproof2.tex
@@ -9,14 +9,8 @@
 
 \documentclass[12pt]{article}
 
-\usepackage{amssymb}
-%\usepackage{lmodern}
-\usepackage[lf,semibold]{libertine}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
-%\usepackage[varqu,varl]{zi4}
 \usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[libertine]{newtxmath}
+\usepackage[noBBpl,sc]{mathpazo}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  package for drawing diagrams%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -252,7 +246,7 @@ chosen the integer subscript labeling here for later convenience.  We require, o
 \delta_{mn} ~~~~~ \langle b_m|b_n\rangle = \delta_{mn} \end{equation} We will assume that the path lengths are such that zero net phase is accumulated as the particle goes along the internal
 paths of the interferometer.  On passing through the first, then the second beamsplitter it follows from the above transformations that the evolution is \begin{equation} |s_1\rangle
 \longrightarrow \frac{1}{\sqrt{2}} ( |a_0\rangle + |a_1\rangle ) \longrightarrow |b_1\rangle \end{equation} Thus the detector, $B_1$, in path $b_1$ will always fire and there is zero
-probability that the $B_2$ detector will fire. However, if we insert a phase shifter $\phi=\pi$ in the $a_2$ path as indicated then the evolution is \begin{equation} |s_1\rangle
+probability that the $B_2$ detector will fire. However, if we insert a phase shifter $\phi=\pi$ in the $a_1$ path as indicated then the evolution is \begin{equation} |s_1\rangle
 \longrightarrow \frac{1}{\sqrt{2}} ( |a_0\rangle + |a_1\rangle ) \longrightarrow \frac{1}{\sqrt{2}} ( |a_0\rangle - |a_1\rangle )\longrightarrow |b_2\rangle \end{equation} With the phase
 shifter in place the detector $B_2$ will always fire and there is zero probability that the detector $B_1$ will fire.
 
