--- a/1205.1439/psionticproof2.tex
+++ b/1205.1439/psionticproof2.tex
@@ -9,12 +9,8 @@
 
 \documentclass[12pt]{article}
 
-\usepackage[lf,semibold]{libertine}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
-%\usepackage[varqu,varl]{zi4}
-\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[libertine]{newtxmath}
+\usepackage[noBBpl,sc]{mathpazo}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  package for drawing diagrams%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -275,7 +271,7 @@ shown in Fig.\ \ref{interferometertwo} and we can prepare the state $|\psi\rangl
 \phaseshifter[-90]{PS} \symb[3.9,-0.35]{\phi=\pi} \end{Diagram} \caption{\label{interferometertwo} This apparatus prepares the state $|\varphi\rangle=|a_0\rangle$ which then impinges on \emph{BS2} followed by two
 detectors \emph{B1} and \emph{B2}. A  $\phi=\pi$ phase shifter can be inserted in path $a_1$.} \end{figure} Let $\Lambda_{|\varphi\rangle}$ be the ontic support of the state
 $|\varphi\rangle=|a_0\rangle$.   We now allow it to impinge on the measurement apparatus constituted by \emph{BS2} and the two detectors $B_1$ and $B_2$.  Further, we have the phase shifter,
-$\phi$, which can be inserted in path $a_1$. We have a choice of two setting for the phase shifter.  Either $\phi=0$ (not inserted) or $\phi=\pi$ (inserted). Let
+$\phi$, which can be inserted in path $a_1$. We have a choice of two settings for the phase shifter.  Either $\phi=0$ (not inserted) or $\phi=\pi$ (inserted). Let
 $\Lambda_{|\varphi\rangle}^{B_1}[\phi] \subseteq \Lambda_{|\varphi\rangle}$ be the subset of ontic states in the ontic support of $|\varphi\rangle$ that have non-zero probability of giving
 rise to a click at detector $B_1$ given that the phase shifter in path $a_1$ has setting $\phi$.  We are invoking possibilistic completeness in asserting that this set is well defined.
 Likewise we define $\Lambda_{|\varphi\rangle}^{B_2}[\phi] \subseteq \Lambda_{|\varphi\rangle}$ to be the subset of ontic states in the ontic support of $|\varphi\rangle$ that have non-zero
