--- a/1409.1570/Leifer.tex
+++ b/1409.1570/Leifer.tex
@@ -46,7 +46,8 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
+\usepackage[noBBpl,sc]{mathpazo}
+
 \linespread{1.1}
 \tolerance=2000
 \hbadness=2000
@@ -257,9 +258,10 @@ presentation and criticism of them, and to explain their implications.
 One of the most intriguing things about proving that the wavefunction
 must be ontic is that it would imply a large number of existing no-go
 results, including Bell's Theorem \cite{Bell1964} and excess baggage
-theorems \cite{Hardy2004, Montina2008, Montina2011}(i.e.\ showing that
+theorems (i.e.\ showing that
 the size of the ontic state space must be infinite and must scale
-exponentially with the number of systems).  Therefore, even apart from
+exponentially with the number of systems) \cite{Hardy2004, Montina2008, Montina2011}.
+Therefore, even apart from
 its foundational significance, proving the reality of the wavefunction
 could potentially provide a powerful unification of the known no-go
 theorems, and may have applications in quantum information theory.
@@ -9192,7 +9194,10 @@ The proof just consists of combining Theorem~\ref{prop:ME:char}
 with Theorem~\ref{prop:KS:conv}.
 \pagebreak
 \balance
-\begin{thebibliography}{10}
+
+\raggedright
+
+\begin{thebibliography}{999}
 
 \bibitem{Bell1964}
 Bell JS.
