--- a/helpers/fixarxiv-libtertine.tex
+++ b/helpers/fixarxiv-libtertine.tex
@@ -1,5 +1,5 @@
 
-\usepackage[lf,semibold]{libertine}
+\usepackage[lf,semibold,serif,ScaleRM=1.05]{libertinus}
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
 %\usepackage[varqu,varl]{zi4}
