--- a/helpers/fixarxiv-libtertine.tex
+++ b/helpers/fixarxiv-libtertine.tex
@@ -1,10 +1,10 @@
 
-\usepackage[lf,semibold,serif,ScaleRM=1.05]{libertinus}
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
-%\usepackage[varqu,varl]{zi4}
-\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[lf,semibold,serif,ScaleRM=1.05,tt=false]{libertinus}
 \usepackage[libertine]{newtxmath}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
