--- a/1911.10874/1911.10874-psu.tex
+++ b/1911.10874/1911.10874-psu.tex
@@ -2,7 +2,7 @@
 
 
 %\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[p,osf,scale=1.00]{baskervillef}
+\usepackage[p]{baskervillef}
 \usepackage[T1]{fontenc} % best for Western European languages 
 \usepackage{textcomp} % required to get special symbols 
 \usepackage[varqu,varl]{inconsolata}% a typewriter font must be defined 
@@ -12,8 +12,7 @@
 \linespread{1.1}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
-\linespread{1.05}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
