--- a/1310.8302/epistemic.tex
+++ b/1310.8302/epistemic.tex
@@ -1,4 +1,4 @@
-\documentclass[prl,twocolumn,superscriptaddress]{revtex4-1}
+\documentclass[prl,onecolumn,superscriptaddress,12pt]{revtex4-2}
 
 \usepackage{graphics}
 \usepackage{graphicx}
@@ -10,12 +10,53 @@
 %\usepackage{lscape}
 \usepackage{enumerate}
 %\usepackage{fullpage}
-\usepackage{hyperref}
 \usepackage{natbib}
 \usepackage{braket}
 %\usepackage{rotating}
 %\special{! /setdistillerparams where {pop}{userdict /setdistillerparams {pop} put}ifelse
 % <</AutoRotatePages /None>> setdistillerparams}
+
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+\input{../helpers/cmrsum}
+
+\usepackage{microtype}
+
+\usepackage{xcolor}
+
+\usepackage[colorlinks=true,
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue,
+,pdfborder=false
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \newtheorem{thm}{Theorem}
 \newtheorem{cor}[thm]{Corollary}
@@ -70,9 +111,6 @@
 %\newcommand{\wuerzburg}{\affiliation{Fakult{\"{a}}t f\"{u}r Physik und Astronomie, Universit\"{a}t W\"{u}rzburg, Am Hubland, 97074 W\"{u}rzburg, Germany}}
 
 % Macros for comments (choose any color you want)
-\definecolor{red}{rgb}{0.9,0,0}
-\definecolor{green}{rgb}{0,0.8,0}
-\definecolor{blue}{rgb}{0,0,0.8}
 \definecolor{cautionred}{rgb}{1.0,0,0}
 \newcommand{\note}[1]{{\marginpar{\vspace{1em}\color{red} \fontfamily{sfdefault}\fontsize{9pt}{9pt}\selectfont #1}}}
 \newcommand{\add}[1]{{\color{blue} #1}}
@@ -105,7 +143,7 @@
 \author{Owen J. E. Maroney}
 \affiliation{Faculty of Philosophy, University of Oxford, UK}
 \pacs{03.65.Ta, 03.67.-a, 03.65.-w}
-\date{\today}
+\date{30 Oct 2013 }
 
 \begin{abstract}
 
