--- a/helpers/fixarxiv-baskerville.tex
+++ b/helpers/fixarxiv-baskerville.tex
@@ -1,5 +1,5 @@
 %\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[p,osf,scale=1.00]{baskervillef}
+\usepackage[p]{baskervillef}
 \usepackage[T1]{fontenc} % best for Western European languages 
 \usepackage{textcomp} % required to get special symbols 
 \usepackage[varqu,varl]{inconsolata}% a typewriter font must be defined 
@@ -10,7 +10,6 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
-\linespread{1.05}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
@@ -37,3 +36,11 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
