--- a/1310.8302/epistemic.tex
+++ b/1310.8302/epistemic.tex
@@ -1,10 +1,11 @@
 \documentclass[prl,onecolumn,superscriptaddress,12pt]{revtex4-2}
+\usepackage[noBBpl,sc]{mathpazo}
 
 \usepackage{graphics}
 \usepackage{graphicx}
 \usepackage{amsthm} % for theorems
 \usepackage{amsbsy} % for bold symbols (\bf doesn't work for Greek letters)
-\usepackage{amsmath,amsfonts,amssymb,times,color}
+\usepackage{amsmath,amsfonts,amssymb,xcolor}
 %\usepackage{dsfont}
 %\usepackage{pdflscape}
 %\usepackage{lscape}
@@ -17,7 +18,6 @@
 % <</AutoRotatePages /None>> setdistillerparams}
 
 %\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
@@ -31,8 +31,6 @@
 \input{../helpers/cmrsum}
 
 \usepackage{microtype}
-
-\usepackage{xcolor}
 
 \usepackage[colorlinks=true,
 ,urlcolor=blue
