--- a/1310.8302/epistemic.tex
+++ b/1310.8302/epistemic.tex
@@ -47,6 +47,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 
+\usepackage[numbered]{bookmark}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
