--- a/1310.8302/mainbody.tex
+++ b/1310.8302/mainbody.tex
@@ -1,5 +1,7 @@
 % !TEX root = epistemic.tex
 
+\section*{Introduction}
+
 No-go theorems such as Bell's \cite{Bell1964} are of central importance to our understanding of quantum mechanics. Bell's theorem shows that locally causal models must make different predictions from quantum theory. In addition to the fundamental significance of this result, Bell's theorem has applications in quantum information processing, most notably in device-independent cryptography and randomness generation \cite{Ekert1991, Barrett2005, Cavalcanti2012, Pironio2010}. 
 
 Recently, a number of new no-go results have been derived, addressing a different question than whether nature can be described by a locally causal theory.  The question concerns whether the quantum state should be viewed as a description of the physical state of a system, or as an observer's information about the system. Many authors (see, e.g., Refs.~\cite{Spekkens2005, Bartlett2011, Fuchs2013}, and references therein) have argued for the latter, pointing out, for example, that quantum collapse is analogous to Bayesian updating of a classical probability distribution when new data is obtained, or that the indistinguishability of non-orthogonal quantum states is analogous to the indistinguishability of overlapping probability distributions. Ref.~\cite{Pusey2012}, following Ref.~\cite{Harrigan2010}, considers models of a specific form, in which the quantum state corresponds to a probability distribution over some set of underlying physical states, hence can be thought of as representing an observer's partial information about the physical state. It is shown that such models cannot recover the quantum predictions unless the distributions are disjoint for distinct quantum states. Roughly speaking, if the assumptions of Ref.~\cite{Pusey2012} are accepted, then the quantum state must describe some part of reality.
@@ -7,13 +9,13 @@ Recently, a number of new no-go results have been derived, addressing a differen
 One assumption of Ref.~\cite{Pusey2012} is that the physical states are uncorrelated for independently prepared systems. It is interesting to investigate what can be established without this assumption. Various works have investigated what can be concluded by considering measurements on a single system only, i.e, without any assumption about independent systems \cite{Lewis2012,Maroney2012a,Leifer2013, Patra2013, Aaronson2013}. Here, we consider a single quantum system, and derive bounds on the extent to which the probability distributions corresponding to distinct quantum states can overlap. We show that what we call \emph{maximally $\psi$-epistemic models}, in which the overlap of the probability distributions is large enough to explain fully the indistinguishability of quantum states, must make different predictions from quantum theory for Hilbert space dimension $d\geq 3$. Our result is noise-tolerant, allowing for experimental tests to rule out this class of models. Furthermore, we show that as $d\rightarrow\infty$, any model recovering quantum predictions must become \emph{arbitrarily bad} at explaining quantum state indistinguishability. 
 
 
-\textit{Non-orthogonality and epistemic states.}
+\section*{Non-orthogonality and epistemic states.}
 Non-orthogonal quantum states cannot be distinguished with certainty in a single shot. This is sometimes regarded as a distinctly quantum phenomenon, but of course a similar thing is true of classical probability distributions. Consider a standard deck of 52 playing cards and a shuffling/drawing machine with two settings: with the first setting, a red card is drawn at random, and with the second setting, the card is a randomly chosen ace. The two settings correspond to probability distributions $p$ and $q$ such that $p=\frac{1}{26}$ for all red cards and $q=\frac{1}{4}$ for each ace. Given a single card drawn from the pack, and asked to determine under what setting the machine was operating, one cannot succeed with certainty. The reason is simply that the distributions $p$ and $q$ overlap, e.g., $p$ and $q$ are both nonzero for the ace of hearts. 
 
 
 This suggests that the inability to distinguish non-orthogonal quantum states could be explained analogously. In that case, two quantum states would be indistinguishable in a single-shot experiment because they would correspond to overlapping distributions over states of reality. The aim of this work is to explore the extent to which such an explanation is even possible, consistently with the quantum predictions.
 
-\textit{Ontological models for quantum theory.} To formalize this idea, we shall use the framework  of \em ontological models \em \cite{Spekkens2005, Harrigan2010}. This framework assumes that when a physical system has been prepared in the quantum state $\ket{\psi}$, it is actually in an \em ontic state \em $\lambda$, which we can think of as the `state of reality'. An ontological model assigns to each quantum state $\ket{\psi}$ an \em epistemic state \em  $\mu_\psi$, which is a probability distribution over the set of ontic states $\Lambda$, and represents our ignorance about which ontic state $\lambda$ the system is in. Since an epistemic state is a probability distribution, it must satisfy
+\section*{Ontological models for quantum theory.} To formalize this idea, we shall use the framework  of \em ontological models \em \cite{Spekkens2005, Harrigan2010}. This framework assumes that when a physical system has been prepared in the quantum state $\ket{\psi}$, it is actually in an \em ontic state \em $\lambda$, which we can think of as the `state of reality'. An ontological model assigns to each quantum state $\ket{\psi}$ an \em epistemic state \em  $\mu_\psi$, which is a probability distribution over the set of ontic states $\Lambda$, and represents our ignorance about which ontic state $\lambda$ the system is in. Since an epistemic state is a probability distribution, it must satisfy
 \begin{eqnarray} \label{eq:mu}
 \mu_\psi(\lambda) \geq 0 & \quad\textrm{   and   }\quad & \int \mu_\psi(\lambda) \de{\lambda} =1.
 \end{eqnarray}
@@ -71,7 +73,7 @@ An ontological model is \emph{maximally $\psi$-epistemic} if and only if  for al
 \end{dfn}
 The motivation for this terminology is that, as we have already argued, the impossibility of discriminating non-orthogonal quantum states would be explained in a natural way if the two quantum states sometimes correspond to the same state of reality. But this explanation would not be satisfying if the quantum and classical overlaps were not equal. For then, the two classical distributions could in principle be better discriminated by a device with access to $\lambda$, and some additional explanation must be adduced as to why the two quantum states are hard to distinguish. In a maximally $\psi$-epistemic model, on the other hand, the difficulty of discriminating non-orthogonal quantum states is completely and quantitatively explained by the difficulty of discriminating the corresponding epistemic states.
 
-\textit{Ruling out maximally $\psi$-epistemic models.} Our results rule out maximally $\psi$-epistemic models for quantum systems of dimension $d \geq 3$, and are noise-tolerant. For $d=2$, an ontological model due to Kochen and Specker \cite{Kochen1967} can be shown to be maximally $\psi$-epistemic \cite{peterlewisprivcomm}. 
+\section*{Ruling out maximally $\psi$-epistemic models.} Our results rule out maximally $\psi$-epistemic models for quantum systems of dimension $d \geq 3$, and are noise-tolerant. For $d=2$, an ontological model due to Kochen and Specker \cite{Kochen1967} can be shown to be maximally $\psi$-epistemic \cite{peterlewisprivcomm}. 
 
 The case of three-dimensional systems, and an analysis designed to account for experimental noise, will follow below. First, consider systems of dimension $d\geq 4$. 
 \begin{thm}\label{maintheorem}
@@ -144,7 +146,7 @@ Moreover, the upper bound on $k$ asymptotically tends to zero, meaning that as $
 \ee
 where $|c\rangle$, $|e^\alpha_i\rangle$ all lie within a power prime-dimensional subspace. Since $|c\rangle$ can be chosen to be an arbitrary state (by applying the same unitary to $|c\rangle$ and all the other states in the proof, thus maintaining their overlaps), this implies that for every quantum state in $d\geq4$, there exists a finite set of states such that the average ratio of classical and quantum overlaps is bounded as above. 
 
-\textit{The noisy case.} In a real experiment, observed relative frequencies will not exactly match the quantum predictions, hence if the experiment is to rule out a class of ontological models, it is necessary to consider models that only approximately reproduce quantum predictions. Suppose that an experiment is carried out in which quantum systems are repeatedly prepared and then measured. Each time, the preparation is (intended to be) of a pure state chosen at random from the set of mutually unbiased bases employed in the proof of Theorem~\ref{maintheorem}. The measurement is (intended to be) either a projective measurement onto one of these bases, or a projective measurement $M$ with outcomes $f_1,\ldots, f_4$, chosen so that $\langle f_1 | e^\alpha_i\rangle = \langle f_2 | e^\beta_j\rangle = \langle f_3 | c \rangle = 0$ for some triple $(|e^\alpha_i\rangle , | e^\beta_j \rangle , |c\rangle )$, with $f_4$ corresponding to a projector onto the orthogonal subspace.
+\section*{The noisy case.} In a real experiment, observed relative frequencies will not exactly match the quantum predictions, hence if the experiment is to rule out a class of ontological models, it is necessary to consider models that only approximately reproduce quantum predictions. Suppose that an experiment is carried out in which quantum systems are repeatedly prepared and then measured. Each time, the preparation is (intended to be) of a pure state chosen at random from the set of mutually unbiased bases employed in the proof of Theorem~\ref{maintheorem}. The measurement is (intended to be) either a projective measurement onto one of these bases, or a projective measurement $M$ with outcomes $f_1,\ldots, f_4$, chosen so that $\langle f_1 | e^\alpha_i\rangle = \langle f_2 | e^\beta_j\rangle = \langle f_3 | c \rangle = 0$ for some triple $(|e^\alpha_i\rangle , | e^\beta_j \rangle , |c\rangle )$, with $f_4$ corresponding to a projector onto the orthogonal subspace.
 
 Let $R[g|\psi]$ be the relative frequency with which outcome $g$ is observed when the preparation is $\psi$. Quantum theory predicts, for example, that if $\langle f_1|e^\alpha_i\rangle=0$, and the experiment is carried out perfectly, then $R[f_1 | e^\alpha_i]$ will be zero, while noise will ensure that $R[f_1 | e^\alpha_i]$ is typically greater than zero. The following analysis is designed to take this noise into account. For simplicity, we assume that the measurement is perfectly aligned in the three-dimensional subspace spanned by $(|e^\alpha_i\rangle , | e^\beta_j \rangle , |c\rangle )$, ignoring the possibility that the outcome $f_4$ occurs. We also ignore the related issue of detector inefficiency. 
 
@@ -190,7 +192,7 @@ For any value of $d\ge 4$ there exist small but non-zero values of $\epsilon_1$ 
 \ee
 Assuming $\epsilon=\epsilon_1=\epsilon_2$, this requires an error of $\epsilon < 0.0034$ for $d=4$ and even lower for higher dimensions. A high-precision measurement is required to achieve this, but it is one that is within the reach of the current state of the art using, for example, ion trap \cite{Brown2011, Gaebler2012} or magnetic resonance \cite{Ryan2009} technology.
 
-\textit{Ruling out maximally epistemic models for $d=3$.}
+\section*{Ruling out maximally epistemic models for $d=3$.}
 The proof of Theorem~\ref{maintheorem} does not apply to the $d=3$ case, since mutually unbiased bases supply PP-incompatible triples only if $d\ge4$. It is, nonetheless, possible to rule out maximally epistemic models. The analysis of the noisy case turns out to be useful, because in $d=3$ one can construct a proof that makes use of triples of quantum states that are close to, rather than exactly, PP-incompatible. One can then apply an inequality analogous to Eq.~(\ref{eq:initial_inequality_main}). The details of this argument are given in Appendix~2. We obtain $k \leq 0.95$.
 
-\textit{Conclusion.} We have considered ontological models for quantum systems, wherein a quantum state corresponds to a probability distribution over some set of ontic states. Such a model might be viewed as a schematic account of an underlying theory, more fundamental than quantum theory, but might equally be thought of as a classical simulation of quantum theory. Either way, it is interesting to investigate the constraints on such models, given that they reproduce quantum predictions. From an analysis of preparations and measurements on a single system, we have derived an upper bound on the extent to which probability distributions corresponding to distinct quantum states can overlap. An experimental challenge is to perform an experiment with sufficient precision that maximally $\psi$-epistemic models are ruled out. Finally, in prior work, Montina has established interesting connections between ontological models and communication complexity problems \cite{Montina2012}. It would be interesting to determine the relationship between our results and communication complexity.  
+\section*{Conclusion.} We have considered ontological models for quantum systems, wherein a quantum state corresponds to a probability distribution over some set of ontic states. Such a model might be viewed as a schematic account of an underlying theory, more fundamental than quantum theory, but might equally be thought of as a classical simulation of quantum theory. Either way, it is interesting to investigate the constraints on such models, given that they reproduce quantum predictions. From an analysis of preparations and measurements on a single system, we have derived an upper bound on the extent to which probability distributions corresponding to distinct quantum states can overlap. An experimental challenge is to perform an experiment with sufficient precision that maximally $\psi$-epistemic models are ruled out. Finally, in prior work, Montina has established interesting connections between ontological models and communication complexity problems \cite{Montina2012}. It would be interesting to determine the relationship between our results and communication complexity.  
