--- a/quant-ph-0305007/text.tex
+++ b/quant-ph-0305007/text.tex
@@ -16,6 +16,8 @@
 \usepackage{cite}
 \usepackage{microtype}
 
+\def\underline#1{{\bf #1}}
+
 % hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
 ,breaklinks=true
