--- a/1911.10874/1911.10874-psu.tex
+++ b/1911.10874/1911.10874-psu.tex
@@ -1,18 +1,11 @@
 \documentclass[12pt]{article}
 
 
-%\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[p]{baskervillef}
-\usepackage[T1]{fontenc} % best for Western European languages 
-\usepackage{textcomp} % required to get special symbols 
-\usepackage[varqu,varl]{inconsolata}% a typewriter font must be defined 
-\usepackage{amsmath,amsthm}% must be loaded before newtxmath 
-\usepackage[baskervillef,vvarbb,subscriptcorrection]{newtxmath} % STIX Bbb 
-\usepackage{bm} % load after all math to give access to bold math
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
