--- a/0712.0149/0712.0149.tex
+++ b/0712.0149/0712.0149.tex
@@ -1351,7 +1351,7 @@ See \citeN[part IV]{bassighirardireview} for a review of progress in constructin
 
 \section{Conclusion}\label{DMWWconclusion}
 
-The predictions of QM may be deduced from an rather well-defined mathematical formalism via an rather badly defined algorithm. Solving the measurement problem may be done in one of two ways: either we must provide an interpretation of the mathematical formalism which makes it a satisfactory physical theory and which entails the correctness of the algorithm; or we must invent a different formalism and a different algorithm which gives the same results, and then give a satisfactory interpretation of \emph{that} algorithm.
+The predictions of QM may be deduced from an rather well-defined mathematical formalism via a rather badly defined algorithm. Solving the measurement problem may be done in one of two ways: either we must provide an interpretation of the mathematical formalism which makes it a satisfactory physical theory and which entails the correctness of the algorithm; or we must invent a different formalism and a different algorithm which gives the same results, and then give a satisfactory interpretation of \emph{that} algorithm.
 
 
 
@@ -1372,6 +1372,7 @@ The truth is very different. Most philosophers of physics are realists, or at le
 \citeN{penroseroadtoreality} regards ``measurement problem'' as too anodyne a term for this conceptual crisis in physics. He proposes ``measurement paradox''; perhaps philosophers would do well to follow his lead. 
 
 \begin{thebibliography}{}
+\raggedright
 
 \bibitem[\protect\citeauthoryear{Aharonov and Vaidman}{Aharonov and
   Vaidman}{1996}]{aharonovvaidman}
