--- a/quant-ph-0111068/Crakow.tex
+++ b/quant-ph-0111068/Crakow.tex
@@ -1,25 +1,64 @@
-
-
-
 %\documentclass[10pt,twocolumn]{article}
-\documentclass[10pt]{article}
+\documentclass[12pt]{article}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{graphics}
+\usepackage{graphicx}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\title{\textbf{Why Quantum Theory?}}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
-\author{Lucien Hardy\thanks{\texttt{hardy@qubit.org.}}\\
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+\title{\large\textbf{Why Quantum Theory?}}
+
+\author{\large Lucien Hardy\thanks{\texttt{hardy@qubit.org.}}\\
 \textit{Centre for Quantum Computation,}\\
 \textit{The Clarendon Laboratory,}\\
 \textit{Parks road, Oxford OX1 3PU, UK}}
 
 \begin{document}
 
-\setlength{\textwidth}{12.5cm}
-\setlength{\textheight}{19cm}
+\date{\normalsize 12 Nov 2001}
 
 
 \maketitle
@@ -36,6 +75,8 @@ summarize the main points of this new approach.  I will leave out the
 details of the proof that these axioms are equivalent to the usual
 formulation of quantum theory (for these see reference \cite{Hardy1}).
 \end{abstract}
+
+\newpage
 
 \section{Introduction}
 
@@ -133,8 +174,9 @@ $K=N$ and in quantum theory we have $K=N^2$.  We will explain why this
 is the case later.
 
 \begin{figure*}[t]
-\resizebox{\textwidth}{!}
-{\includegraphics{qaxiomf1.eps}}
+\begin{center}
+{\includegraphics[width=5in]{qaxiomf1.eps}}
+\end{center}
 \caption{\small The situation considered consists of a preparation device with
 a knob for varying the state of the system produced and a release button
 for releasing the system, a transformation device for transforming the
