--- a/quant-ph-0509061/quant-ph-0509061.tex
+++ b/quant-ph-0509061/quant-ph-0509061.tex
@@ -40,6 +40,50 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \documentclass[12pt]{iopart}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+%\input{../helpers/cmrsum}
+%\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \begin{document}
 
 \title{From Einstein's Theorem to Bell's Theorem: \\ A History of Quantum Nonlocality} %[From Einstein's Theorem to Bell's Theorem]
@@ -177,7 +221,7 @@ by some detailed specification of the localization of the
 particle during its propagation. I think M. de Broglie
  is right in searching in this direction. If one
 works only with Schr\"odinger waves, the [Copenhagen] interpretation of $|\psi|^2$, 
-I think, contradicts the postulates of relativity.Ó
+I think, contradicts the postulates of relativity.
 \end{quote}
 
 Why was Einstein not {\em more} enthusiastic about de Broglie's theory? 
@@ -691,7 +735,7 @@ Contributed Papers, pp. 107--116 (1994).
 
  \bibitem{Sch35b} %steering1
  E. Schr\"odinger, `Discussion of Probability Relations Between
-Separated Systems,Ó Proc. Camb. Phil. Soc. {\bf 31},
+Separated Systems,Ã“ Proc. Camb. Phil. Soc. {\bf 31},
 553--563 (1935). %
 
 \bibitem{Sch36}
