--- a/quant-ph-0509061/quant-ph-0509061.tex
+++ b/quant-ph-0509061/quant-ph-0509061.tex
@@ -47,6 +47,7 @@
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\linespread{1.1}
 
 % these include amsmath and that can cause trouble in older docs.
 %\input{../helpers/cmrsum}
