--- a/quant-ph-0506199/mi_arxiv_new.tex
+++ b/quant-ph-0506199/mi_arxiv_new.tex
@@ -346,13 +346,13 @@ $\Phi$.
 
 The effective SQUID Hamiltonian can be written as \cite{Weiss:1999:tv}
 %
-\begin{multline} \label{eq:squid-h}
+\begin{equation} \label{eq:squid-h}
 \widehat{H} = \frac{\widehat{P}_\Phi^2}{2C} + U(\Phi) 
 = - \frac{\hbar^2}{2C}
  \frac{d^2}{d\Phi^2} + \biggl[ \frac{(\Phi- 
-  \Phi_\text{ext})^2}{2L} \\ - \frac{I_c \Phi_0}{2\pi} \cos \biggl(
+  \Phi_\text{ext})^2}{2L} - \frac{I_c \Phi_0}{2\pi} \cos \biggl(
 2\pi \frac{\Phi}{\Phi_0} \biggr) \biggr],
-\end{multline}
+\end{equation}
 %
 where $C$ is the total capacitance (mainly due to the junction), $L$
 is the (finite) self-inductance of the loop, and $I_c$ is the critical
