--- a/quant-ph-0307175/AV8120.tex
+++ b/quant-ph-0307175/AV8120.tex
@@ -1,6 +1,6 @@
 
 %\documentclass[twocolumn,a4paper,groupedaddress,showpacs,pra]{revtex4}
-\documentclass[twocolumn,a4paper,superscriptaddress,showpacs,floatfix,pra]{revtex4}
+\documentclass[12pt,a4paper,superscriptaddress,showpacs,floatfix,pra]{revtex4-2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{graphics}
@@ -11,6 +11,49 @@
 \usepackage{flafter}
 \usepackage{afterpage}
 \usepackage{color}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 \setcounter{MaxMatrixCols}{10}
 %TCIDATA{OutputFilter=LATEX.DLL}
@@ -51,7 +94,7 @@ Brighton, Sussex, BN1 9QT, U.K.}
 \author{H.~Prance}
 \affiliation{Centre for Physical Electronics and Quantum Technology, School of Science and Technology, University of Sussex, 
 Brighton, Sussex, BN1 9QT, U.K.}
-\date{\today }
+\date{12 Dec 2003 }
 
 \begin{abstract}
 In this paper  we explore the quantum behaviour of  a SQUID ring which
@@ -72,7 +115,9 @@ quantum states of the ring.
 \pacs{74.50+r 85.25.Dq 03.65.-w 42.50.Dv}
 \maketitle
 
-\section*{Introduction}
+\newpage
+
+\section{Introduction}
 
 In  two recent  publications~\cite{EverittSCVRPP01,EverittCSPPVR01} we
 reported on the theoretical  description of a quantum mechanical SQUID
@@ -136,9 +181,9 @@ optics,  albeit   at  much   lower  frequencies.  In   practice  these
 frequencies would typically  be much less than a  THz for low critical
 temperature superconductors.
 
-\section*{Background}
+\section{Background}
 
-\subsection*{Wigner and Weyl Functions}
+\subsection{Wigner and Weyl Functions}
 
 Although the Wigner  and Weyl functions are familiar  to those working
 in             the             field            of             quantum
@@ -198,7 +243,7 @@ valued. In this paper, therefore, we only ever plot its absolute value
 since, for our purposes,  this provides us with sufficient information
 about the correlations of the wavefunction.
 
-\subsection*{The SQUID Ring Hamiltonian}
+\subsection{The SQUID Ring Hamiltonian}
 
 Over the last two decades  SQUID rings, viewed as single, macroscopic,
 quantum  objects,  have been  the  subject  of considerable  attention
@@ -366,9 +411,9 @@ figure~\ref{f1},  with  the  very  weak  coupling  between  levels  in
 different  wells,  the  energy  splittings  at  these  points  may  be
 extremely small indeed.
 
-\section*{Results}
+\section{Results}
 
-\subsection*{Quantum superpositions of macroscopically distinct states}
+\subsection{Quantum superpositions of macroscopically distinct states}
 
 Ignoring,  for  the  moment,  the  special  cases  where  the  locally
 s-harmonic  oscillator states  are degenerate  (zero  coupling between
@@ -426,7 +471,7 @@ at a  fixed time $t=0$. However,  its general form does  not vary with
 time.  Nevertheless, there is  dynamical evolution of the interference
 term in the superposition but not in the observable flux states.
 
-\subsection*{Tunable superposition of states in a SQUID ring}
+\subsection{Tunable superposition of states in a SQUID ring}
 
 We  now  consider  the  potential   with  a  static  bias  flux  $\Phi
 _{x}=0.5\Phi   _{0}   $,   as    shown   in   the   bottom   plot   of
@@ -566,7 +611,7 @@ demonstrates that the Wigner  function (and, of course, the associated
 Weyl function) can expose  sophisticated quantum coherent behaviour in
 SQUID rings.
 
-\subsection*{Dissipation}
+\subsection{Dissipation}
 
 In considering the effect of dissipation on the calculations presented
 in  this paper  we have  chosen to  use a  standard approach,  and one
@@ -616,7 +661,7 @@ probability and not  a quantum one. This is  also clearly reflected in
 the disappearance of the symmetrically positioned correlation peaks in
 the Weyl function at these later times.
 
-\subsection*{Squeezed states of a SQUID ring}
+\subsection{Squeezed states of a SQUID ring}
 
 Just as in quantum optics, where coherent light can be squeezed in the
 number-phase plane  through its interaction with  a non-linear optical
@@ -718,7 +763,7 @@ potential  would,  unless  matching  conditions  exist  between  local
 s-harmonic energy  levels of adjacent wells, allow  some adjustment of
 the expectation value of the flux in the ring.
 
-\section*{Conclusions}
+\section{Conclusions}
 
 In this paper  we have explored two applications  of SQUID rings, with
 strong analogies to the field of quantum optics, which may prove to be
@@ -750,7 +795,7 @@ circuit technologies. This further enhances our understanding of these
 non-pertubative quantum objects and their possible usefulness in these
 incipient technologies.
 
-\section*{Acknowledgements}
+\section{Acknowledgements}
 
 We would like to thank the EPSRC for its generous funding of this work
 and for  sponsoring the U.K.  Quantum Circuits Network. We  would also
